--- a/.github/workflows/regression.yml
+++ b/.github/workflows/regression.yml
@@ -267,6 +267,53 @@ jobs:
         with:
           entrypoint: /bin/rm
           args: -rf install install_bin.tgz src ccache ${{ matrix.config_set }}
+  address_sanitizer_tests:
+    runs-on: ${{ inputs.runner || 'ubuntu-latest' }}
+    name: Address Sanitizer Tests
+    needs: build_asan
+    strategy:
+      fail-fast: false
+      matrix:
+        testscript: ['serial_regression.py']
+    steps:
+      - name: Reduce ASLR entropy for asan
+        run: sudo sysctl -w vm.mmap_rnd_bits=28
+      - name: Pre Cleanup
+        uses: docker://ghcr.io/su2code/su2/test-su2-asan:240320-1536
+        with:
+          entrypoint: /bin/rm
+          args: -rf install install_bin.tgz src ccache ${{ matrix.config_set }}
+      - name: Download All artifacts
+        uses: actions/download-artifact@v4
+      - name: Uncompress and Move Binaries
+        run: |
+          BIN_FOLDER="$PWD/install/bin"
+          mkdir -p $BIN_FOLDER
+          ls -lah $BIN_FOLDER
+          for type in Base Reverse Forward; do
+            TYPE_FOLDER="${type}NoMPI-asan"
+            echo "Processing '$TYPE_FOLDER' ..."
+            if [ -d $TYPE_FOLDER ]; then
+              pushd $TYPE_FOLDER
+              ls -lah
+              tar -zxvf install_bin.tgz
+              ls -lah install/bin/
+              cp -r install/* $BIN_FOLDER/../
+              popd;
+            fi
+          done
+          chmod a+x $BIN_FOLDER/*
+          ls -lahR $BIN_FOLDER
+      - name: Run Tests in Container
+        uses: docker://ghcr.io/su2code/su2/test-su2-asan:240320-1536
+        with:
+          # -t <Tutorials-branch> -c <Testcases-branch>
+          args: -b ${{github.ref}} -t develop -c develop -s ${{matrix.testscript}} -a "--asan"
+      - name: Cleanup
+        uses: docker://ghcr.io/su2code/su2/test-su2-asan:240320-1536
+        with:
+          entrypoint: /bin/rm
+          args: -rf install install_bin.tgz src ccache ${{ matrix.config_set }}
   unit_tests:
     runs-on: ${{ inputs.runner || 'ubuntu-latest' }}
     name: Unit Tests
