Enable address sanitizer execution of SU2_CFD_AD serial regression AD tests.

--- a/.github/workflows/regression.yml
+++ b/.github/workflows/regression.yml
@@ -274,7 +274,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        testscript: ['serial_regression.py']
+        testscript: ['serial_regression.py', 'serial_regression_AD.py']
     steps:
       - name: Reduce ASLR entropy for asan
         run: sudo sysctl -w vm.mmap_rnd_bits=28
