Added hydrogen combustion tutorial to tutorial regression tests and updated MLPCpp module

--- a/TestCases/flamelet/07_laminar_premixed_h2_flame_cfd/laminar_premixed_h2_flame_cfd.cfg
+++ b/TestCases/flamelet/07_laminar_premixed_h2_flame_cfd/laminar_premixed_h2_flame_cfd.cfg
@@ -107,7 +107,7 @@ CONV_RESIDUAL_MINVAL= -5
 CONV_STARTITER= 20
 SCREEN_OUTPUT = INNER_ITER RMS_PRESSURE RMS_ProgressVariable RMS_EnthalpyTot RMS_MixtureFraction
 HISTORY_OUTPUT = WALL_TIME RMS_RES 
-VOLUME_OUTPUT = SOLUTION PRIMITIVE SOURCE RESIDUAL
+VOLUME_OUTPUT = SOLUTION
 
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
 %
