--- a/TestCases/rans/flatplate/turb_SST_flatplate_compressibility_Sarkar.cfg
+++ b/TestCases/rans/flatplate/turb_SST_flatplate_compressibility_Sarkar.cfg
@@ -13,7 +13,7 @@
 %
 SOLVER= RANS
 KIND_TURB_MODEL= SST
-SST_OPTIONS= V2003m, COMPRESSIBILITY-WILCOX
+SST_OPTIONS= V2003m, COMPRESSIBILITY-SARKAR
 MATH_PROBLEM= DIRECT
 RESTART_SOL= NO
 
@@ -141,7 +141,7 @@ RESTART_ADJ_FILENAME= restart_adj.dat
 % ------------------------------- SOLVER CONTROL ------------------------------%
 %
 
-INNER_ITER= 100
+ITER= 100
 OUTER_ITER= 1
 TIME_ITER= 100
 CONV_RESIDUAL_MINVAL= -14
