--- a/.github/workflows/regression.yml
+++ b/.github/workflows/regression.yml
@@ -173,7 +173,7 @@ jobs:
         uses: docker://ghcr.io/su2code/su2/test-su2:230813-0103
         with:
           # -t <Tutorials-branch> -c <Testcases-branch>
-          args: -b ${{github.ref}} -t develop -c develop -s ${{matrix.testscript}}
+          args: -b ${{github.ref}} -t fix_symmetry -c fix_symmetry -s ${{matrix.testscript}}
       - name: Cleanup
         uses: docker://ghcr.io/su2code/su2/test-su2:230813-0103
         with:
