--- a/TestCases/flamelet/01_laminar_premixed_ch4_flame_cfd/lam_prem_ch4_cfd.cfg
+++ b/TestCases/flamelet/01_laminar_premixed_ch4_flame_cfd/lam_prem_ch4_cfd.cfg
@@ -13,7 +13,7 @@
 SOLVER = INC_NAVIER_STOKES
 KIND_TURB_MODEL= NONE
 MATH_PROBLEM= DIRECT
-RESTART_SOL = YES
+RESTART_SOL = NO
 %
 % ---------------- INCOMPRESSIBLE FLOW CONDITION DEFINITION -------------------%
 %
@@ -37,15 +37,16 @@ KIND_SCALAR_MODEL= FLAMELET
 DIFFUSIVITY_MODEL= FLAMELET
 VISCOSITY_MODEL= FLAMELET
 CONDUCTIVITY_MODEL= FLAMELET
+FLAME_INIT_METHOD= FLAME_FRONT
 FLAME_INIT= (0.0032, 0.00, 0.00, 1.0, 0.1, 0.0, 1.0e-3, 0.1)
 % # progvar, enthalpy
 SPECIES_INIT = (0.0, -210000, 0.0, 0.0)
-CONV_NUM_METHOD_SPECIES= SCALAR_UPWIND
+CONV_NUM_METHOD_SPECIES= BOUNDED_SCALAR
 MUSCL_SPECIES= YES
 SLOPE_LIMITER_SPECIES= NONE
 TIME_DISCRE_SPECIES= EULER_IMPLICIT
 % SCALAR CLIPPING
-SPECIES_CLIPPING= YES
+SPECIES_CLIPPING= NO
 SPECIES_CLIPPING_MIN= 0 -2e6 0 0
 SPECIES_CLIPPING_MAX= 1 2e6 1 1
 %
@@ -85,9 +86,10 @@ MARKER_ANALYZE_AVERAGE = AREA
 % ------------- COMMON PARAMETERS DEFINING THE NUMERICAL METHOD ---------------%
 %
 NUM_METHOD_GRAD= WEIGHTED_LEAST_SQUARES
-CFL_NUMBER= 350
+CFL_NUMBER= 50
+%CFL_NUMBER= 100
 CFL_ADAPT= NO
-ITER= 100
+ITER= 10000
 OUTPUT_WRT_FREQ= 100
 %
 % ------------------------ LINEAR SOLVER DEFINITION ---------------------------%
@@ -126,8 +128,8 @@ MESH_FILENAME = mesh_structured.cgns
 MESH_OUT_FILENAME= mesh_out.su2
 SOLUTION_FILENAME= solution
 RESTART_FILENAME= restart
-%OUTPUT_FILES = (RESTART,PARAVIEW,PARAVIEW_MULTIBLOCK) 
-OUTPUT_FILES = (RESTART) 
+OUTPUT_FILES = (RESTART,PARAVIEW,PARAVIEW_MULTIBLOCK) 
+%OUTPUT_FILES = (RESTART) 
 TABULAR_FORMAT = CSV
 CONV_FILENAME= history
 VOLUME_FILENAME= ch4_flame_cfd
