--- a/TestCases/incomp_navierstokes/sphere/sphere.cfg
+++ b/TestCases/incomp_navierstokes/sphere/sphere.cfg
@@ -52,6 +52,8 @@ CFL_ADAPT_PARAM= ( 1.5, 0.5, 1.0, 100.0 )
 ITER=1000
 VENKAT_LIMITER_COEFF= 0.01
 
+% ------------------------ LINEAR SOLVER DEFINITION ---------------------------%
+%
 LINEAR_SOLVER= FGMRES
 LINEAR_SOLVER_PREC= ILU
 LINEAR_SOLVER_ERROR= 1E-05
@@ -78,7 +80,7 @@ CONV_CAUCHY_EPS= 1E-6
 
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
 %
-MESH_FILENAME= sphere_2syms.su2
+MESH_FILENAME= slice_2syms.su2
 MESH_FORMAT= SU2
 SOLUTION_FILENAME= solution_flow.dat
 TABULAR_FORMAT= CSV
