Update and rename TestCases/engine/inv_channel_engine_inflow.cfg to TestCases/engine/marker_engine_inflow/inv_channel_engine_inflow.cfg

--- a/TestCases/engine/marker_engine_inflow/inv_channel_engine_inflow.cfg
+++ b/TestCases/engine/marker_engine_inflow/inv_channel_engine_inflow.cfg
@@ -68,12 +68,14 @@ MARKER_INLET= ( inlet, 288.6, 102010.0, 1.0, 0.0, 0.0 )
 % Comment above line and uncomment next for  Mach ~ 0.7 (transonic)
 %MARKER_INLET= ( inlet, 316.224, 140513.23, 1.0, 0.0, 0.0 )
 %
-% Outlet boundary marker(s) (NONE = no marker)
-% Format: ( outlet marker, back pressure (static), ... )
+% Engine inflow boundary marker(s) (NONE = no marker)
+% Format: (engine inflow marker, fan face Mach, ... )
 MARKER_ENGINE_INFLOW= ( outlet, 0.1)
 ENGINE_INFLOW_TYPE= FAN_FACE_MACH
-DAMP_ENGINE_INFLOW= 0.9
-BC_EVAL_FREQ = 5
+% Damping factor for the engine inflow.
+DAMP_ENGINE_INFLOW= 0.2
+% Evaluation frequency for engine marker values
+BC_EVAL_FREQ = 1
 
 % ------------------------ SURFACES IDENTIFICATION ----------------------------%
 %
