--- a/TestCases/flamelet/01_laminar_premixed_ch4_flame_cfd/lam_prem_ch4_cfd.cfg
+++ b/TestCases/flamelet/01_laminar_premixed_ch4_flame_cfd/lam_prem_ch4_cfd.cfg
@@ -13,7 +13,7 @@
 SOLVER = INC_NAVIER_STOKES
 KIND_TURB_MODEL= NONE
 MATH_PROBLEM= DIRECT
-RESTART_SOL = NO
+RESTART_SOL = YES
 %
 % ---------------- INCOMPRESSIBLE FLOW CONDITION DEFINITION -------------------%
 %
@@ -87,7 +87,6 @@ MARKER_ANALYZE_AVERAGE = AREA
 %
 NUM_METHOD_GRAD= WEIGHTED_LEAST_SQUARES
 CFL_NUMBER= 50
-%CFL_NUMBER= 100
 CFL_ADAPT= NO
 ITER= 10000
 OUTPUT_WRT_FREQ= 100
