--- a/TestCases/engine/marker_engine_inflow/inv_channel_engine_inflow.cfg
+++ b/TestCases/engine/marker_engine_inflow/inv_channel_engine_inflow.cfg
@@ -175,7 +175,7 @@ CONV_CAUCHY_EPS= 1E-10
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
 %
 % Mesh input file
-MESH_FILENAME= mesh_channel_256x128.su2
+MESH_FILENAME= /TestCases/euler/channel/mesh_channel_256x128.su2
 %
 % Mesh input file format (SU2, CGNS, NETCDF_ASCII)
 MESH_FORMAT= SU2
