--- a/config_template.cfg
+++ b/config_template.cfg
@@ -672,7 +672,7 @@ FAN_POLY_EFF= 1.0
 % Only half engine is in the computational grid (NO, YES)
 ENGINE_HALF_MODEL= NO
 %
-% Evalutation Frequency for Engine and Actuator Disk Markers
+% Evaluation Frequency for Engine and Actuator Disk Markers
 BC_EVAL_FREQ = 40
 %
 % Damping factor for the engine inflow.
