Updated header of the config file
Changed Case Description, Author, Date and File Version

--- a/TestCases/engine/marker_engine_inflow/inv_channel_engine_inflow.cfg
+++ b/TestCases/engine/marker_engine_inflow/inv_channel_engine_inflow.cfg
@@ -1,11 +1,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                                                                              %
 % SU2 configuration file                                                       %
-% Case description: Inviscid, internal flow over a bump in a channel           %
-% Author: Thomas D. Economon                                                   %
+% Case description: Inviscid, internal flow over a bump in a channel with      %
+% prescribed Mach number for outlet BC                                         %
+% Author: Thomas D. Economon , Berke C. Deveci                                                   %
 % Institution: Stanford University                                             %
-% Date: 2012.09.29                                                             %
-% File Version 4.0.2 "Cardinal"                                                %
+% Date: 2024.05.28                                                             %
+% File Version 8.0.1 "Harrier"                                                 %
 %                                                                              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
