Added options to config template

--- a/config_template.cfg
+++ b/config_template.cfg
@@ -995,7 +995,22 @@ STREAMWISE_PERIODIC_TEMPERATURE= NO
 % Upon convergence, the area averaged inlet temperature will be INC_TEMPERATURE_INIT.
 % Defaults to 0.0.
 STREAMWISE_PERIODIC_OUTLET_HEAT= 0.0
-
+%
+% -------------------- BAY Source term vortex generator model -----------------%
+%
+% Chose vortex generator model (default=NONE, BAY, JBAY)
+VG_MODEL = NONE
+%
+% Specify BAY model constant. Default value is 10.
+VG_CONST = 10
+%
+% Specify vortex generator definition file. 
+% It should include the following colums to define the vortex generator:
+% L(lenght) h1(height leading edge) h2(height trailing edge) beta(VG angle in degrees) 
+% p1x p2y p1z(leaidng edge x,y,z coordinates) unx uny unz(surfce normal vector x,y,z components) 
+% ux uy uz(surface tangential vector x,y,z components)
+VG_CONFIG = vg.cfg
+%
 % -------------------- BOUNDARY CONDITION DEFINITION --------------------------%
 %
 % Euler wall boundary marker(s) (NONE = no marker)
