fix convergence of edge_PPR

--- a/TestCases/nicf/edge/edge_PPR.cfg
+++ b/TestCases/nicf/edge/edge_PPR.cfg
@@ -50,9 +50,9 @@ MARKER_MONITORING= ( WALL1 )
 % ------------- COMMON PARAMETERS DEFINING THE NUMERICAL METHOD ---------------%
 %
 NUM_METHOD_GRAD= GREEN_GAUSS
-CFL_NUMBER= 10
-CFL_ADAPT= NO
-CFL_ADAPT_PARAM= ( 1.5, 0.5, 1.0, 100.0 )
+CFL_NUMBER= 0.01
+CFL_ADAPT= YES
+CFL_ADAPT_PARAM= ( 0.9, 1.1, 0.01, 100.0 )
 RK_ALPHA_COEFF= ( 0.66667, 0.66667, 1.000000 )
 ITER= 500
 
@@ -105,4 +105,4 @@ GRAD_OBJFUNC_FILENAME= of_grad.dat
 SURFACE_FILENAME= surface_flow
 SURFACE_ADJ_FILENAME= surface_adjoint
 OUTPUT_WRT_FREQ= 250
-SCREEN_OUTPUT= (INNER_ITER, RMS_DENSITY, RMS_ENERGY, LIFT, DRAG)
+SCREEN_OUTPUT= (INNER_ITER, RMS_DENSITY, RMS_ENERGY, LIFT, DRAG, AVG_CFL)
