--- a/TestCases/nicf/edge/edge_PPR.cfg
+++ b/TestCases/nicf/edge/edge_PPR.cfg
@@ -50,7 +50,7 @@ MARKER_MONITORING= ( WALL1 )
 % ------------- COMMON PARAMETERS DEFINING THE NUMERICAL METHOD ---------------%
 %
 NUM_METHOD_GRAD= GREEN_GAUSS
-CFL_NUMBER= 1
+CFL_NUMBER= 5
 CFL_ADAPT= YES
 CFL_ADAPT_PARAM= ( 0.9, 1.1, 1.0, 200.0 )
 RK_ALPHA_COEFF= ( 0.66667, 0.66667, 1.000000 )
@@ -105,4 +105,4 @@ GRAD_OBJFUNC_FILENAME= of_grad.dat
 SURFACE_FILENAME= surface_flow
 SURFACE_ADJ_FILENAME= surface_adjoint
 OUTPUT_WRT_FREQ= 250
-SCREEN_OUTPUT= (INNER_ITER, RMS_DENSITY, RMS_ENERGY, LIFT, DRAG, AVG_CFL)
+SCREEN_OUTPUT= (INNER_ITER, RMS_DENSITY, RMS_ENERGY, LIFT, DRAG)
