--- a/TestCases/nicf/edge/edge_VW.cfg
+++ b/TestCases/nicf/edge/edge_VW.cfg
@@ -51,9 +51,9 @@ MARKER_MONITORING= ( WALL1 )
 % ------------- COMMON PARAMETERS DEFINING THE NUMERICAL METHOD ---------------%
 %
 NUM_METHOD_GRAD= GREEN_GAUSS
-CFL_NUMBER= 10
-CFL_ADAPT= NO
-CFL_ADAPT_PARAM= ( 1.5, 0.5, 1.0, 100.0 )
+CFL_NUMBER= 2.5
+CFL_ADAPT= YES
+CFL_ADAPT_PARAM= ( 0.9, 1.1, 1.0, 200.0 )
 RK_ALPHA_COEFF= ( 0.66667, 0.66667, 1.000000 )
 ITER= 500
 
@@ -66,8 +66,8 @@ LINEAR_SOLVER_ITER= 10
 
 % -------------------------- MULTIGRID PARAMETERS -----------------------------%
 %
-MGLEVEL= 2
-MGCYCLE= V_CYCLE
+MGLEVEL= 3
+MGCYCLE= W_CYCLE
 MG_PRE_SMOOTH= ( 1, 2, 3, 3 )
 MG_POST_SMOOTH= ( 0, 0, 0, 0 )
 MG_CORRECTION_SMOOTH= ( 0, 0, 0, 0 )
