--- a/config_template.cfg
+++ b/config_template.cfg
@@ -1801,6 +1801,10 @@ TIME_DISCRE_TURB= EULER_IMPLICIT
 % Reduction factor of the CFL coefficient in the turbulence problem
 CFL_REDUCTION_TURB= 1.0
 
+% Control lower limit constants of the SST model (C*phi_infinity)
+LOWER_LIMIT_K_FACTOR= 1e-20
+LOWER_LIMIT_OMEGA_FACTOR= 1e-6
+
 % --------------------- HEAT NUMERICAL METHOD DEFINITION ----------------------%
 %
 % Value of the thermal diffusivity
