update laminar sphere regression

--- a/TestCases/incomp_navierstokes/sphere/sphere.cfg
+++ b/TestCases/incomp_navierstokes/sphere/sphere.cfg
@@ -13,27 +13,32 @@
 %
 SOLVER= INC_NAVIER_STOKES
 KIND_TURB_MODEL= NONE
-MATH_PROBLEM= DIRECT
 RESTART_SOL= YES
 INC_NONDIM= DIMENSIONAL
 
 % ---------------- INCOMPRESSIBLE FLOW CONDITION DEFINITION -------------------%
-% Re = rho*V*D/mu = 0.01*20*1.0/0.01 = 20
-INC_DENSITY_INIT= 0.01
-INC_VELOCITY_INIT= ( 20., 0.0, 0.0 )
+% Re = rho*V*D/mu = 1*1*2.0/2.0 = 1.0
+INC_DENSITY_MODEL= CONSTANT
+INC_ENERGY_EQUATION= NO
+INC_DENSITY_INIT= 1.0
+
+INC_VELOCITY_INIT= (1.0, 0.0, 0.0 )
+INC_VELOCITY_REF = 1
+INC_DENSITY_REF = 1.0
 
 % --------------------------- VISCOSITY MODEL ---------------------------------%
 %
 VISCOSITY_MODEL= CONSTANT_VISCOSITY
-MU_CONSTANT= 0.01
-
+MU_CONSTANT= 2.0
 % ---------------------- REFERENCE VALUE DEFINITION ---------------------------%
 %
 REF_ORIGIN_MOMENT_X = 0.25
 REF_ORIGIN_MOMENT_Y = 0.00
 REF_ORIGIN_MOMENT_Z = 0.00
-REF_LENGTH= 1.0
-REF_AREA= 1.0
+% sphere is 1/40 of a complete sphere
+% area = pi*r^2 = 3.14159
+% 1/40 slice = 0.07854
+REF_AREA= 0.07854
 
 % -------------------- BOUNDARY CONDITION DEFINITION --------------------------%
 %
@@ -45,11 +50,10 @@ MARKER_MONITORING= ( wall )
 
 % ------------- COMMON PARAMETERS DEFINING THE NUMERICAL METHOD ---------------%
 %
-NUM_METHOD_GRAD= GREEN_GAUSS
-CFL_NUMBER= 5.0
+NUM_METHOD_GRAD= GREEN_GAUSS 
+CFL_NUMBER= 10.0
 CFL_ADAPT= NO
-CFL_ADAPT_PARAM= ( 1.5, 0.5, 1.0, 100.0 )
-ITER=1000
+ITER=50000
 VENKAT_LIMITER_COEFF= 0.01
 
 % ------------------------ LINEAR SOLVER DEFINITION ---------------------------%
@@ -61,12 +65,18 @@ LINEAR_SOLVER_ITER= 5
 
 % -------------------------- MULTIGRID PARAMETERS -----------------------------%
 %
-MGLEVEL= 0
+MGLEVEL= 1
+MGCYCLE= V_CYCLE
+MG_PRE_SMOOTH= ( 1, 2, 3, 3 )
+MG_POST_SMOOTH= ( 1, 1, 1, 1 )
+MG_CORRECTION_SMOOTH= ( 1, 1, 1, 1 )
+MG_DAMP_RESTRICTION= 0.6
+MG_DAMP_PROLONGATION= 0.6
 
 % -------------------- FLOW NUMERICAL METHOD DEFINITION -----------------------%
 %
 CONV_NUM_METHOD_FLOW= FDS
-MUSCL_FLOW= NO
+MUSCL_FLOW= YES
 SLOPE_LIMITER_FLOW= NONE
 JST_SENSOR_COEFF= ( 0.5, 0.04 )
 TIME_DISCRE_FLOW= EULER_IMPLICIT
@@ -90,5 +100,5 @@ VOLUME_FILENAME= flow
 SURFACE_FILENAME= surface_flow
 OUTPUT_WRT_FREQ= 100
 WRT_VOLUME_OVERWRITE= YES
-SCREEN_OUTPUT= ( INNER_ITER, RMS_PRESSURE, RMS_VELOCITY-X, RMS_VELOCITY-Y, RMS_VELOCITY-Z, LIFT, DRAG )
+SCREEN_OUTPUT= ( INNER_ITER, RMS_PRESSURE, RMS_VELOCITY-X, RMS_VELOCITY-Y, RMS_VELOCITY-Z, LIFT, DRAG)
 VOLUME_OUTPUT= ( SOLUTION,PRIMITIVE,RESIDUAL,MULTIGRID, RANK )
