--- a/Common/src/linear_algebra/meson.build
+++ b/Common/src/linear_algebra/meson.build
@@ -2,5 +2,6 @@ common_src += files(['CSysSolve_b.cpp',
                      'CSysSolve.cpp',
                      'CSysVector.cpp',
                      'CSysMatrix.cpp',
+                     'GPU_lin_alg.cu',
                      'CPastixWrapper.cpp',
                      'blas_structure.cpp'])
