--- a/meson.build
+++ b/meson.build
@@ -1,4 +1,4 @@
-project('SU2', 'c', 'cpp',
+project('SU2', 'c', 'cpp', 'cuda',
         version: '8.0.1 "Harrier"',
         meson_version: '>=0.61.1',
         license: 'LGPL2',
@@ -14,6 +14,9 @@ endif
 
 pymod = import('python')
 python = pymod.find_installation()
+
+add_global_arguments('-G', language : 'cuda')
+
 
 su2_cpp_args = []
 su2_deps     = [declare_dependency(include_directories: 'externals/CLI11')]
@@ -194,6 +197,12 @@ if get_option('enable-pastix')
                                     '-lm', '-lrt', '-lpthread'])
   endif
   su2_deps += pastix_dep
+endif
+
+if get_option('enable-cuda')
+  su2_cpp_args += '-DHAVE_CUDA'
+  gpu_dep = dependency('cuda', version : '>=10', modules : ['cudart', 'nvblas'])
+  su2_deps += gpu_dep
 endif
 
 # blas-type dependencies
