--- a/TestCases/turbomachinery/axial_stage_full_annulus_unsteady/stage35_FA_Unsteady.cfg
+++ b/TestCases/turbomachinery/axial_stage_full_annulus_unsteady/stage35_FA_Unsteady.cfg
@@ -1,11 +1,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                                                                              %
 % SU2 configuration file                                                       %
-% Case description: Inviscid, internal flow over a bump in a channel           %
-% Author: Thomas D. Economon                                                   %
-% Institution: Stanford University                                             %
-% Date: 2012.09.29                                                             %
-% File Version 7.1.0 "Blackbird"                                                %
+% Case description: Axial-stage full-annulus unsteady                          %
+% Author: Chuanxiang Yan                                                       %
+% Institution: Tsinghua University                                             %
+% Date: 2024.06.27                                                             %
+% File Version 8.0.1 "Harrier"                                                 %
 %                                                                              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
