--- a/TestCases/turbomachinery/axial_stage_full_annulus_unsteady/stator_FA_Unsteady.cfg
+++ b/TestCases/turbomachinery/axial_stage_full_annulus_unsteady/stator_FA_Unsteady.cfg
@@ -1,11 +1,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                                                                              %
 % SU2 configuration file                                                       %
-% Case description: 2D Axial stage                                             %
-% Author: S. Vitale                                                            %
-% Institution: Delft University of Technology                                  %
-% Date: Feb 28th, 2017                                                         %
-% File Version 5.0.0"cardinal"                                                 %
+% Case description: Axial-stage full-annulus unsteady                          %
+% Author: Chuanxiang Yan                                                       %
+% Institution: Tsinghua University                                             %
+% Date: 2024.06.27                                                             %
+% File Version 8.0.1 "Harrier"                                                 %
 %                                                                              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
