update test case

--- a/TestCases/sliding_interface/inlet_distortion_relative_frame/duct_unsteady.cfg
+++ b/TestCases/sliding_interface/inlet_distortion_relative_frame/duct_unsteady.cfg
@@ -11,19 +11,20 @@
 
 % Enable multizone mode
 MULTIZONE= YES
+%
 MULTIZONE_MESH= NO
 %
 % List of config files to set zone specific options
-CONFIG_LIST= (rotor_FA_Unsteady.cfg, stator_FA_Unsteady.cfg)
+CONFIG_LIST= (zone_1.cfg, zone_2.cfg)
 %
 TIME_DOMAIN= YES
 %
 % Time stpe for dual time stepping simultaions (s)
-TIME_STEP= 0.0000116355
+TIME_STEP= 0.0000628318
 %
 TIME_ITER= 1000
 %
-OUTER_ITER=40
+OUTER_ITER= 20
 %
 RESTART_ITER= 1
 %
@@ -41,7 +42,7 @@ MATH_PROBLEM= DIRECT
 %
 % Restart solution (NO, YES)
 RESTART_SOL= YES
-
+%
 % ------------------------- TIME-DEPENDENT SIMULATION -------------------------------%
 %
 % Unsteady simulation (NO, TIME_STEPPING, DUAL_TIME_STEPPING-1ST_ORDER,
@@ -51,7 +52,7 @@ TIME_MARCHING= DUAL_TIME_STEPPING-1ST_ORDER
 % -------------------- COMPRESSIBLE FREE-STREAM DEFINITION --------------------%
 %
 % Mach number (non-dimensional, based on the free-stream values)
-MACH_NUMBER= 0.2
+MACH_NUMBER= 0.1
 %
 % Angle of attack (degrees, only for compressible flows)
 AOA= 0.0
@@ -69,10 +70,10 @@ FREESTREAM_TEMPERATURE= 288.0
 FREESTREAM_DENSITY= 1.2886
 %
 % Free-stream option to choose if you want to use Density (DENSITY_FS) or Temperature (TEMPERATURE_FS) to initialize the solution
-FREESTREAM_OPTION= TEMPERATURE_FS
+FREESTREAM_OPTION= DENSITY_FS
 %
 % Free-stream Turbulence Intensity
-FREESTREAM_TURBULENCEINTENSITY = 0.05
+FREESTREAM_TURBULENCEINTENSITY = 0.5
 %
 % Free-stream Turbulent to Laminar viscosity ratio
 FREESTREAM_TURB2LAMVISCRATIO = 100.0
@@ -121,33 +122,42 @@ CONDUCTIVITY_MODEL= CONSTANT_PRANDTL
 
 % -------------------- BOUNDARY CONDITION DEFINITION --------------------------%
 %
+% Euler wall boundary marker(s) (NONE = no marker)
+MARKER_HEATFLUX= ( HUB_1, 0.0, SHROUD_1, 0.0, HUB_2, 0.0, SHROUD_2, 0.0 )
 %
-MARKER_ZONE_INTERFACE=(R1_OUTLET, S1_INLET)
+% Zone interaction boundary definition
+MARKER_ZONE_INTERFACE= ( MIX_OUT, MIX_IN )
+MARKER_FLUID_INTERFACE= ( MIX_OUT, MIX_IN )
 %
-MARKER_FLUID_INTERFACE=(R1_OUTLET, S1_INLET)
+INLET_TYPE=TOTAL_CONDITIONS
 %
-% Navier-Stokes wall boundary marker(s) (NONE = no marker)
-MARKER_HEATFLUX= ( R1_HUB, 0.0, R1_SHROUD, 0.0, S1_HUB, 0.0, S1_SHROUD, 0.0, R1_BLADE, 0.0, S1_BLADE, 0.0 )
+SPECIFIED_INLET_PROFILE=YES
 %
-MARKER_INLET= ( R1_INLET, 288.6, 101300.0, 0.0, 0.0, 1.0 )
+INLET_FILENAME=Inlet_Distortion.dat
 %
-MARKER_OUTLET= ( S1_OUTLET, 101300.0 )
+%INLET_FILENAME
 %
-% ------------------------ SURFACES IDENTIFICATION ----------------------------%
+MARKER_INLET= ( INFLOW, 288.6, 120000.0, 0.0, 0.0, 1.0 )
 %
-% Marker(s) of the surface to be plotted or designed
-MARKER_PLOTTING= ( MIX_OUT, MIX_IN, ROTOR, STATOR )
+MARKER_OUTLET= ( OUTFLOW, 101300.0 )
 %
-
 % ------------- COMMON PARAMETERS DEFINING THE NUMERICAL METHOD ---------------%
 %
 % Numerical method for spatial gradients (GREEN_GAUSS, WEIGHTED_LEAST_SQUARES)
 NUM_METHOD_GRAD= WEIGHTED_LEAST_SQUARES
 %
 % Courant-Friedrichs-Lewy condition of the finest grid
-CFL_NUMBER= 5.0
+CFL_NUMBER= 5
 %
+% Adaptive CFL number (NO, YES)
+CFL_ADAPT= NO
 %
+% Parameters of the adaptive CFL number (factor down, factor up, CFL min value,
+%                                        CFL max value )
+CFL_ADAPT_PARAM= ( 0.1, 1.2, 5.0, 30.0 )
+%
+
+
 % ------------------------ LINEAR SOLVER DEFINITION ---------------------------%
 %
 % Linear solver for implicit formulations (BCGSTAB, FGMRES)
@@ -167,8 +177,6 @@ LINEAR_SOLVER_ITER= 10
 % Multi-Grid Levels (0 = no multi-grid)
 MGLEVEL= 0
 %
-%
-%
 % ----------------------- SLOPE LIMITER DEFINITION ----------------------------%
 %
 % Coefficient for the limiter
@@ -183,7 +191,7 @@ LIMITER_ITER= 999999
 %
 % Convective numerical method (JST, LAX-FRIEDRICH, CUSP, ROE, AUSM, HLLC,
 %                              TURKEL_PREC, MSW)
-CONV_NUM_METHOD_FLOW= LAX-FRIEDRICH
+CONV_NUM_METHOD_FLOW= ROE
 %
 % Spatial numerical order integration (1ST_ORDER, 2ND_ORDER, 2ND_ORDER_LIMITER)
 MUSCL_FLOW= NO
@@ -229,12 +237,6 @@ CFL_REDUCTION_TURB= 0.5
 % for multizone problem ITER must not be used when running multizone and/or unsteady problems.
 % Use TIME_ITER, OUTER_ITER or INNER_ITER to specify number of time iterations,
 % outer iterations or inner iterations, respectively. 
-
-%
-% Convergence criteria (CAUCHY, RESIDUAL)
-%
-%CONV_CRITERIA= RESIDUAL
-%
 %
 % Min value of the residual (log10 of the residual)
 CONV_RESIDUAL_MINVAL= -16
@@ -251,22 +253,23 @@ CONV_CAUCHY_EPS= 1E-6
 
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
 %
+% Mesh input file
+%MESH_FILENAME= zone_2_FA.su2
+%
 % Mesh input file format (SU2, CGNS, NETCDF_ASCII)
 MESH_FORMAT= SU2
 %
 % Mesh output file
-MESH_OUT_FILENAME= mesh_out.cgns
+MESH_OUT_FILENAME= mesh_out.su2
 %
-%READ_BINARY_RESTART= NO
+% Read binary restart files (YES, NO)
+READ_BINARY_RESTART= NO
 %
 % Restart flow input file
-SOLUTION_FILENAME= solution_flow.dat
-%
-% Restart adjoint input file
-SOLUTION_ADJ_FILENAME= solution_adj.dat
+SOLUTION_FILENAME= solution_flow.csv
 %
 % Output file format (PARAVIEW, TECPLOT, STL)
-TABULAR_FORMAT= CSV
+TABULAR_FORMAT= TECPLOT
 %
 OUTPUT_FILES=(TECPLOT)
 %
@@ -286,6 +289,7 @@ GRAD_OBJFUNC_FILENAME= of_grad.dat
 SURFACE_FILENAME= surface_flow
 %
 % Writing solution file frequency
-OUTPUT_WRT_FREQ= 1
+OUTPUT_WRT_FREQ= 10
 %
-%
+VOLUME_OUTPUT= (COORDINATES, SOLUTION, PRIMITIVE, MPI, GRID_VELOCITY, RESIDUAL, MESH_QUALITY)
+
