--- a/TestCases/sliding_interface/inlet_distortion_relative_frame/zone_1.cfg
+++ b/TestCases/sliding_interface/inlet_distortion_relative_frame/zone_1.cfg
@@ -16,7 +16,9 @@ GRID_MOVEMENT= ROTATING_FRAME
 %
 %
 % Angular velocity vector (rad/s) about the motion origi. Example 1250 RPM -> 130.89969389957471 rad/s
-ROTATION_RATE= 0.0 0.0 -1800.0
+%ROTATION_RATE= 0.0 0.0 0.5 
+ROTATION_RATE= 0.0 0.0 500.0
+%
 %
 % Mesh input file
-MESH_FILENAME= rotor35_Full.su2
+MESH_FILENAME= zone_1_FA.su2
