--- a/TestCases/sliding_interface/inlet_distortion_relative_frame/zone_2.cfg
+++ b/TestCases/sliding_interface/inlet_distortion_relative_frame/zone_2.cfg
@@ -14,22 +14,8 @@
 % Type of dynamic mesh (NONE, ROTATING_FRAME)
 GRID_MOVEMENT= ROTATING_FRAME
 
-% Type of dynamic surface movement (NONE, DEFORMING, 
-%                       MOVING_WALL, FLUID_STRUCTURE, FLUID_STRUCTURE_STATIC,
-%                       AEROELASTIC, EXTERNAL, EXTERNAL_ROTATION,
-%                       AEROELASTIC_RIGID_MOTION)
-%SURFACE_MOVEMENT= MOVING_WALL
-%
-% Moving wall boundary marker(s) (NONE = no marker, ignored for RIGID_MOTION)
-%MARKER_MOVING= ( SHROUD_2 )
-%
-% Coordinates of the motion origin
-%SURFACE_MOTION_ORIGIN= 0 0 1
-%
-% Angular velocity vector (rad/s) about the motion origin
-%SURFACE_ROTATION_RATE = 0.0 0.0 -1260.0
-%
+% Angular velocity vector (rad/s) about the motion origi. Example 1250 RPM -> 130.89969389957471 rad/s
+ROTATION_RATE= 0.0 0.0 0.0 
 %
 % Mesh input file
-MESH_FILENAME= stator35_Full.su2
-
+MESH_FILENAME= zone_2_FA.su2
