--- a/TestCases/sliding_interface/inlet_distortion_relative_frame/zone_2.cfg
+++ b/TestCases/sliding_interface/inlet_distortion_relative_frame/zone_2.cfg
@@ -1,7 +1,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                                                                              %
 % SU2 configuration file                                                       %
-% Case description: Axial-stage full-annulus unsteady                          %
+% Case description: Flow inside two pipes with inlet distortion. A test case   %      
+%                   for sliding interface working for relative frame           %
 % Author: Chuanxiang Yan                                                       %
 % Institution: Tsinghua University                                             %
 % Date: 2024.06.27                                                             %
