--- a/TestCases/incomp_navierstokes/sphere/sphere.cfg
+++ b/TestCases/incomp_navierstokes/sphere/sphere.cfg
@@ -1,101 +1,104 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                                                                              %
 % SU2 configuration file                                                       %
-% Case description: Steady, laminar flow around a cylinder (Re 20)             %
-% Author: Thomas D. Economon                                                   %
-% Institution: Stanford University                                             %
-% Date: 2013.09.30                                                             %
+% Case description: laminar flow around a sphere                               %
+% Author: Nijso Beishuizen                                                     %
+% Institution: Technische Universiteit Eindhoven                               %
+% Date: 2024.05.05                                                             %
 % File Version 8.0.1 "Harrier"                                                 %
 %                                                                              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % ------------- DIRECT, ADJOINT, AND LINEARIZED PROBLEM DEFINITION ------------%
 %
-SOLVER= NAVIER_STOKES
+SOLVER= INC_NAVIER_STOKES
 KIND_TURB_MODEL= NONE
-MATH_PROBLEM= DIRECT
-RESTART_SOL= NO
+RESTART_SOL= YES
+INC_NONDIM= DIMENSIONAL
 
-% -------------------- COMPRESSIBLE FREE-STREAM DEFINITION --------------------%
+% ---------------- INCOMPRESSIBLE FLOW CONDITION DEFINITION -------------------%
+% Re = rho*V*D/mu = 1*1*2.0/2.0 = 1.0
+INC_DENSITY_MODEL= CONSTANT
+INC_ENERGY_EQUATION= NO
+INC_DENSITY_INIT= 1.0
+
+INC_VELOCITY_INIT= (1.0, 0.0, 0.0 )
+INC_VELOCITY_REF = 1
+INC_DENSITY_REF = 1.0
+
+% --------------------------- VISCOSITY MODEL ---------------------------------%
 %
-MACH_NUMBER= 0.1
-AOA= 0.0
-FREESTREAM_TEMPERATURE= 288.15
-REYNOLDS_NUMBER= 40.0
-REYNOLDS_LENGTH= 1.0
-
+VISCOSITY_MODEL= CONSTANT_VISCOSITY
+MU_CONSTANT= 2.0
 % ---------------------- REFERENCE VALUE DEFINITION ---------------------------%
 %
 REF_ORIGIN_MOMENT_X = 0.25
 REF_ORIGIN_MOMENT_Y = 0.00
 REF_ORIGIN_MOMENT_Z = 0.00
-REF_LENGTH= 1.0
-REF_AREA= 1.0
+% sphere is 1/40 of a complete sphere
+% area = pi*r^2 = 3.14159
+% 1/40 slice = 0.07854
+REF_AREA= 0.07854
 
 % -------------------- BOUNDARY CONDITION DEFINITION --------------------------%
 %
-MARKER_HEATFLUX= ( cylinder, 0.0 )
+MARKER_HEATFLUX= ( wall, 0.0 )
+MARKER_SYM= ( symmetry_left, symmetry_right )
 MARKER_FAR= ( farfield )
-MARKER_PLOTTING= ( cylinder )
-MARKER_MONITORING= ( cylinder )
+MARKER_PLOTTING= ( wall )
+MARKER_MONITORING= ( wall )
 
 % ------------- COMMON PARAMETERS DEFINING THE NUMERICAL METHOD ---------------%
 %
-NUM_METHOD_GRAD= WEIGHTED_LEAST_SQUARES
-CFL_NUMBER= 500.0
+NUM_METHOD_GRAD= GREEN_GAUSS 
+CFL_NUMBER= 10.0
 CFL_ADAPT= NO
-CFL_ADAPT_PARAM= ( 1.5, 0.5, 1.0, 100.0 )
-RK_ALPHA_COEFF= ( 0.66667, 0.66667, 1.000000 )
-ITER= 99999
+ITER=50000
+VENKAT_LIMITER_COEFF= 0.01
 
 % ------------------------ LINEAR SOLVER DEFINITION ---------------------------%
 %
 LINEAR_SOLVER= FGMRES
-LINEAR_SOLVER_PREC= LU_SGS
-LINEAR_SOLVER_ERROR= 1E-4
+LINEAR_SOLVER_PREC= ILU
+LINEAR_SOLVER_ERROR= 1E-05
 LINEAR_SOLVER_ITER= 5
 
 % -------------------------- MULTIGRID PARAMETERS -----------------------------%
 %
-MGLEVEL= 2
+MGLEVEL= 1
 MGCYCLE= V_CYCLE
 MG_PRE_SMOOTH= ( 1, 2, 3, 3 )
-MG_POST_SMOOTH= ( 0, 0, 0, 0 )
-MG_CORRECTION_SMOOTH= ( 0, 0, 0, 0 )
-MG_DAMP_RESTRICTION= 0.8
-MG_DAMP_PROLONGATION= 0.8
+MG_POST_SMOOTH= ( 1, 1, 1, 1 )
+MG_CORRECTION_SMOOTH= ( 1, 1, 1, 1 )
+MG_DAMP_RESTRICTION= 0.6
+MG_DAMP_PROLONGATION= 0.6
 
 % -------------------- FLOW NUMERICAL METHOD DEFINITION -----------------------%
 %
-CONV_NUM_METHOD_FLOW= ROE
+CONV_NUM_METHOD_FLOW= FDS
 MUSCL_FLOW= YES
-SLOPE_LIMITER_FLOW= VENKATAKRISHNAN
-VENKAT_LIMITER_COEFF= 10.0
-JST_SENSOR_COEFF= ( 0.5, 0.02 )
+SLOPE_LIMITER_FLOW= NONE
+JST_SENSOR_COEFF= ( 0.5, 0.04 )
 TIME_DISCRE_FLOW= EULER_IMPLICIT
 
 % --------------------------- CONVERGENCE PARAMETERS --------------------------%
 %
-CONV_RESIDUAL_MINVAL= -12
+CONV_RESIDUAL_MINVAL= -10
 CONV_STARTITER= 10
 CONV_CAUCHY_ELEMS= 100
 CONV_CAUCHY_EPS= 1E-6
 
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
 %
-MESH_FILENAME= mesh_cylinder_lam.su2
+MESH_FILENAME= slice_2syms.su2
 MESH_FORMAT= SU2
-MESH_OUT_FILENAME= mesh_out.su2
 SOLUTION_FILENAME= solution_flow.dat
-SOLUTION_ADJ_FILENAME= solution_adj.dat
 TABULAR_FORMAT= CSV
 CONV_FILENAME= history
 RESTART_FILENAME= restart_flow.dat
-RESTART_ADJ_FILENAME= restart_adj.dat
 VOLUME_FILENAME= flow
-VOLUME_ADJ_FILENAME= adjoint
-GRAD_OBJFUNC_FILENAME= of_grad.dat
 SURFACE_FILENAME= surface_flow
-SURFACE_ADJ_FILENAME= surface_adjoint
-OUTPUT_WRT_FREQ= 250
-SCREEN_OUTPUT = (INNER_ITER, RMS_DENSITY, RMS_ENERGY, LIFT, DRAG, TOTAL_HEATFLUX)
+OUTPUT_WRT_FREQ= 100
+WRT_VOLUME_OVERWRITE= YES
+SCREEN_OUTPUT= ( INNER_ITER, RMS_PRESSURE, RMS_VELOCITY-X, RMS_VELOCITY-Y, RMS_VELOCITY-Z, LIFT, DRAG)
+VOLUME_OUTPUT= ( SOLUTION,PRIMITIVE,RESIDUAL,MULTIGRID, RANK )
