Modified screen outputs

--- a/TestCases/coupled_cht/solid_solid_contact_resistance/master.cfg
+++ b/TestCases/coupled_cht/solid_solid_contact_resistance/master.cfg
@@ -29,3 +29,4 @@ OUTER_ITER = 2000
 WRT_ZONE_HIST=YES
 
 OUTPUT_FILES=(RESTART, PARAVIEW_MULTIBLOCK)
+SCREEN_OUTPUT=(RMS_PRESSURE[2],RMS_VELOCITY-X[2],RMS_TEMPERATURE[0],RMS_TEMPERATURE[1])
