--- a/.github/workflows/regression.yml
+++ b/.github/workflows/regression.yml
@@ -213,7 +213,7 @@ jobs:
         uses: docker://ghcr.io/su2code/su2/test-su2:240320-1536
         with:
           # -t <Tutorials-branch> -c <Testcases-branch>
-          args: -b ${{github.ref}} -t develop -c feature_solid-solid_cht -s ${{matrix.testscript}}
+          args: -b ${{github.ref}} -t feature_solid-solid_cht -c feature_solid-solid_cht -s ${{matrix.testscript}}
       - name: Cleanup
         uses: docker://ghcr.io/su2code/su2/test-su2:240320-1536
         with:
