--- a/TestCases/vandv/rans/bump_in_channel/turb_bump_sst.cfg
+++ b/TestCases/vandv/rans/bump_in_channel/turb_bump_sst.cfg
@@ -53,10 +53,10 @@ CONV_RESIDUAL_MINVAL= -13
 MESH_FILENAME= mesh_bump_2d_0089x041.cgns
 MESH_FORMAT= CGNS
 MESH_OUT_FILENAME= mesh_out.su2
-SOLUTION_FILENAME= solution_flow.dat
+SOLUTION_FILENAME= solution_flow
 
 CONV_FILENAME= history
-RESTART_FILENAME= restart_flow.dat
+RESTART_FILENAME= restart_flow
 VOLUME_FILENAME= flow
 SURFACE_FILENAME= surface_flow
 SCREEN_OUTPUT= INNER_ITER WALL_TIME RMS_RES DRAG
