--- a/TestCases/vandv/rans/flatplate/turb_flatplate_sst.cfg
+++ b/TestCases/vandv/rans/flatplate/turb_flatplate_sst.cfg
@@ -58,10 +58,10 @@ CONV_RESIDUAL_MINVAL= -13
 MESH_FILENAME= mesh_flatplate_turb_035x025.su2
 MESH_FORMAT= SU2
 MESH_OUT_FILENAME= mesh_out.su2
-SOLUTION_FILENAME= solution_flow.dat
+SOLUTION_FILENAME= solution_flow
 TABULAR_FORMAT= CSV
 CONV_FILENAME= history
-RESTART_FILENAME= restart_flow.dat
+RESTART_FILENAME= restart_flow
 VOLUME_FILENAME= flow
 SURFACE_FILENAME= surface_flow
 SCREEN_OUTPUT= INNER_ITER WALL_TIME RMS_RES DRAG
