--- a/TestCases/vandv/species_transport/sandia_jet/validation.cfg
+++ b/TestCases/vandv/species_transport/sandia_jet/validation.cfg
@@ -144,8 +144,8 @@ VOLUME_OUTPUT= RESIDUAL, PRIMITIVE
 OUTPUT_WRT_FREQ= 100
 %
 READ_BINARY_RESTART= NO
-RESTART_FILENAME= restart.csv
-SOLUTION_FILENAME= solution.csv
+RESTART_FILENAME= restart
+SOLUTION_FILENAME= solution
 %
 WRT_PERFORMANCE= YES
 OUTPUT_PRECISION= 16
