remove suffix from testcases

--- a/TestCases/disc_adj_fsi/configFlow.cfg
+++ b/TestCases/disc_adj_fsi/configFlow.cfg
@@ -83,8 +83,8 @@ CONV_FILENAME= history
 BREAKDOWN_FILENAME= forces_breakdown.dat
 SOLUTION_FILENAME= solution_flow
 RESTART_FILENAME= restart_flow
-SOLUTION_ADJ_FILENAME= solution_flow_adj.dat
-RESTART_ADJ_FILENAME= restart_flow_adj.dat
+SOLUTION_ADJ_FILENAME= solution_flow_adj
+RESTART_ADJ_FILENAME= restart_flow_adj
 
 MESH_FORMAT= SU2
 TABULAR_FORMAT= CSV
