--- a/TestCases/py_wrapper/dyn_fsi/configFEA.cfg
+++ b/TestCases/py_wrapper/dyn_fsi/configFEA.cfg
@@ -49,6 +49,6 @@ MESH_FILENAME= meshFEA.su2
 
 VOLUME_FILENAME= results_wall
 RESTART_FILENAME= restart_wall.dat
-SOLUTION_FILENAME= solution_wall.dat
+SOLUTION_FILENAME= solution_wall
 
 HISTORY_OUTPUT= ITER, RMS_RES, STRUCT_COEFF, TAVG_STRUCT_COEFF
