--- a/TestCases/rans/actuatordisk_bem/actuatordisk_bem.cfg
+++ b/TestCases/rans/actuatordisk_bem/actuatordisk_bem.cfg
@@ -113,7 +113,7 @@ CONV_FILENAME= history_actuatordisk_bem
 OUTPUT_FILES= (RESTART, PARAVIEW, SURFACE_PARAVIEW)
 WRT_FORCES_BREAKDOWN= YES
 BREAKDOWN_FILENAME= forces_breakdown_actuatordisk_bem.dat
-RESTART_FILENAME= restart_flow_actuatordisk_bem.dat
+RESTART_FILENAME= restart_flow_actuatordisk_bem
 VOLUME_FILENAME= flow_actuatordisk_bem
 SURFACE_FILENAME= surface_flow_actuatordisk_bem
 OUTPUT_WRT_FREQ= 500
