--- a/TestCases/rans/naca0012/turb_NACA0012_sst_2003m.cfg
+++ b/TestCases/rans/naca0012/turb_NACA0012_sst_2003m.cfg
@@ -83,7 +83,7 @@ CONV_STARTITER= 10
 MESH_FILENAME= n0012_225-65.su2
 MESH_FORMAT= SU2
 MESH_OUT_FILENAME= mesh_out.su2
-SOLUTION_FILENAME= solution_flow_sst.dat
+SOLUTION_FILENAME= solution_flow_sst
 TABULAR_FORMAT= CSV
 CONV_FILENAME= history
 RESTART_FILENAME= restart_flow
