--- a/TestCases/rans/naca0012/turb_NACA0012_sst_expliciteuler.cfg
+++ b/TestCases/rans/naca0012/turb_NACA0012_sst_expliciteuler.cfg
@@ -70,6 +70,6 @@ CONV_FILENAME= history
 OUTPUT_FILES= (RESTART_ASCII, PARAVIEW, SURFACE_PARAVIEW)
 OUTPUT_WRT_FREQ= 10000
 RESTART_FILENAME= restart_flow
-SOLUTION_FILENAME= solution_flow_sst_expliciteuler.dat
+SOLUTION_FILENAME= solution_flow_sst_expliciteuler
 VOLUME_FILENAME= flow
 SURFACE_FILENAME= surface_flow
