--- a/TestCases/rans/naca0012/turb_NACA0012_sst_sust.cfg
+++ b/TestCases/rans/naca0012/turb_NACA0012_sst_sust.cfg
@@ -89,7 +89,7 @@ CONV_CAUCHY_EPS= 1E-6
 MESH_FILENAME= n0012_225-65.su2
 MESH_FORMAT= SU2
 MESH_OUT_FILENAME= mesh_out.su2
-SOLUTION_FILENAME= solution_flow_sst_sust.dat
+SOLUTION_FILENAME= solution_flow_sst_sust
 TABULAR_FORMAT= CSV
 CONV_FILENAME= history
 RESTART_FILENAME= restart_flow
