--- a/TestCases/disc_adj_fsi/configFEA.cfg
+++ b/TestCases/disc_adj_fsi/configFEA.cfg
@@ -69,8 +69,8 @@ CONV_FILENAME= history
 BREAKDOWN_FILENAME= forces_breakdown.dat
 SOLUTION_FILENAME= solution_beam.dat
 RESTART_FILENAME= restart_beam.dat
-SOLUTION_ADJ_FILENAME= solution_flow_adj.dat
-RESTART_ADJ_FILENAME= restart_flow_adj.dat
+SOLUTION_ADJ_FILENAME= solution_flow_adj
+RESTART_ADJ_FILENAME= restart_flow_adj
 
 MESH_FORMAT= SU2
 TABULAR_FORMAT= CSV
