--- a/TestCases/disc_adj_rans/naca0012/turb_NACA0012_sst.cfg
+++ b/TestCases/disc_adj_rans/naca0012/turb_NACA0012_sst.cfg
@@ -90,7 +90,7 @@ CONV_CAUCHY_EPS= 1E-6
 MESH_FILENAME= n0012_113-33.su2
 MESH_FORMAT= SU2
 MESH_OUT_FILENAME= mesh_out.su2
-SOLUTION_FILENAME= solution_flow_sst.dat
+SOLUTION_FILENAME= solution_flow_sst
 SOLUTION_ADJ_FILENAME= solution_adj
 TABULAR_FORMAT= CSV
 CONV_FILENAME= history
