--- a/TestCases/navierstokes/poiseuille/profile_poiseuille.cfg
+++ b/TestCases/navierstokes/poiseuille/profile_poiseuille.cfg
@@ -112,7 +112,7 @@ CONV_CAUCHY_EPS= 1E-6
 MESH_FILENAME= mesh_poiseuille_51x51.su2
 MESH_FORMAT= SU2
 MESH_OUT_FILENAME= mesh_out.su2
-SOLUTION_FILENAME= solution_flow_profile.dat
+SOLUTION_FILENAME= solution_flow_profile
 SOLUTION_ADJ_FILENAME= solution_adj
 TABULAR_FORMAT= CSV
 CONV_FILENAME= history
