--- a/TestCases/rans/naca0012/turb_NACA0012_sst_fixedvalues.cfg
+++ b/TestCases/rans/naca0012/turb_NACA0012_sst_fixedvalues.cfg
@@ -78,7 +78,7 @@ CONV_CAUCHY_EPS= 1E-6
 MESH_FILENAME= n0012_113-33.su2
 MESH_FORMAT= SU2
 MESH_OUT_FILENAME= mesh_out.su2
-SOLUTION_FILENAME= solution_flow_sst_fixedvalues.dat
+SOLUTION_FILENAME= solution_flow_sst_fixedvalues
 TABULAR_FORMAT= CSV
 CONV_FILENAME= history
 RESTART_FILENAME= restart_flow
