remove suffix from testcases

--- a/TestCases/disc_adj_fea/configAD_fem.cfg
+++ b/TestCases/disc_adj_fea/configAD_fem.cfg
@@ -48,7 +48,7 @@ CONV_FILENAME= history
 VOLUME_FILENAME= beam
 BREAKDOWN_FILENAME= forces_breakdown.dat
 
-SOLUTION_FILENAME= solution_beam.dat
+SOLUTION_FILENAME= solution_beam
 RESTART_FILENAME= restart_beam.dat
 
 SOLUTION_ADJ_FILENAME= solution_adj
