--- a/TestCases/fea_fsi/SquareCyl_Beam/config.cfg
+++ b/TestCases/fea_fsi/SquareCyl_Beam/config.cfg
@@ -137,7 +137,7 @@ VOLUME_STRUCTURE_FILENAME= results_beam
 CONV_FILENAME= history
 BREAKDOWN_FILENAME= forces_breakdown.dat
 SOLUTION_FILENAME= solution_flow
-SOLUTION_STRUCTURE_FILENAME= solution_beam.dat
+SOLUTION_STRUCTURE_FILENAME= solution_beam
 RESTART_FILENAME= restart_flow
 RESTART_STRUCTURE_FILENAME= restart_beam.dat
 OUTPUT_WRT_FREQ= 1
