--- a/TestCases/fea_fsi/stat_fsi/configFEA.cfg
+++ b/TestCases/fea_fsi/stat_fsi/configFEA.cfg
@@ -48,7 +48,7 @@ VOLUME_FILENAME= result_beam
 
 BREAKDOWN_FILENAME= forces_breakdown.dat
 
-SOLUTION_FILENAME= solution_beam.dat
+SOLUTION_FILENAME= solution_beam
 RESTART_FILENAME= restart_beam.dat
 
 % ------------------------ STRUCTURAL PARAMETERS ------------------------------%
