--- a/TestCases/disc_adj_fsi/configFEA.cfg
+++ b/TestCases/disc_adj_fsi/configFEA.cfg
@@ -67,7 +67,7 @@ VOLUME_FILENAME= results_beam
 CONV_FILENAME= history
 
 BREAKDOWN_FILENAME= forces_breakdown.dat
-SOLUTION_FILENAME= solution_beam.dat
+SOLUTION_FILENAME= solution_beam
 RESTART_FILENAME= restart_beam.dat
 SOLUTION_ADJ_FILENAME= solution_flow_adj
 RESTART_ADJ_FILENAME= restart_flow_adj
