--- a/TestCases/fea_fsi/DynBeam_2d/configBeam_2d.cfg
+++ b/TestCases/fea_fsi/DynBeam_2d/configBeam_2d.cfg
@@ -38,6 +38,6 @@ MESH_FORMAT= SU2
 TABULAR_FORMAT= CSV
 VOLUME_FILENAME= beam
 RESTART_FILENAME= restart_beam.dat
-SOLUTION_FILENAME= solution_beam.dat
+SOLUTION_FILENAME= solution_beam
 OUTPUT_WRT_FREQ= 1
 OUTPUT_FILES= RESTART_ASCII, PARAVIEW
