--- a/QuickStart/inv_NACA0012.cfg
+++ b/QuickStart/inv_NACA0012.cfg
@@ -250,10 +250,10 @@ MESH_FORMAT= SU2
 MESH_OUT_FILENAME= mesh_out.su2
 %
 % Restart flow input file
-SOLUTION_FILENAME= solution_flow.dat
+SOLUTION_FILENAME= solution_flow
 %
 % Restart adjoint input file
-SOLUTION_ADJ_FILENAME= solution_adj.dat
+SOLUTION_ADJ_FILENAME= solution_adj
 %
 % Output file format (TECPLOT, CSV)
 TABULAR_FORMAT= CSV
@@ -262,10 +262,10 @@ TABULAR_FORMAT= CSV
 CONV_FILENAME= history
 %
 % Output file restart flow
-RESTART_FILENAME= restart_flow.dat
+RESTART_FILENAME= restart_flow
 %
 % Output file restart adjoint
-RESTART_ADJ_FILENAME= restart_adj.dat
+RESTART_ADJ_FILENAME= restart_adj
 %
 % Output file flow (w/o extension) variables
 VOLUME_FILENAME= flow
