--- a/meson_options.txt
+++ b/meson_options.txt
@@ -20,7 +20,7 @@ option('extra-deps', type : 'string', value : '', description: 'comma-separated 
 option('enable-mpp',  type : 'boolean', value : false, description: 'enable Mutation++ support')
 option('install-mpp', type : 'boolean', value : false, description: 'install Mutation++ in the directory defined with --prefix')
 option('enable-coolprop',  type : 'boolean', value : false, description: 'enable CoolProp support')
-#option('enable-cantera',  type : 'boolean', value : false, description: 'enable Cantera support')
+option('enable-cantera',  type : 'boolean', value : false, description: 'enable Cantera support')
 #option('install-cantera', type : 'boolean', value : false, description: 'install Cantera in the directory defined with --prefix')
 option('enable-mlpcpp', type : 'boolean', value : false, description: 'enable profiling through gprof')
 option('enable-gprof', type : 'boolean', value : false, description: 'enable MLPCpp support')
