--- a/TestCases/fixed_cl/naca0012/inv_NACA0012.cfg
+++ b/TestCases/fixed_cl/naca0012/inv_NACA0012.cfg
@@ -55,7 +55,7 @@ MARKER_DESIGNING = ( airfoil )
 %
 NUM_METHOD_GRAD= GREEN_GAUSS
 OBJECTIVE_FUNCTION= DRAG
-CFL_NUMBER=1000
+CFL_NUMBER= 5.0
 ITER= 1000
 
 % ------------------------ LINEAR SOLVER DEFINITION ---------------------------%
@@ -115,15 +115,15 @@ CONV_CAUCHY_EPS= 1E-6
 MESH_FILENAME= mesh_NACA0012_inv.su2
 MESH_FORMAT= SU2
 MESH_OUT_FILENAME= mesh_out.su2
-SOLUTION_FILENAME= solution_flow
-SOLUTION_ADJ_FILENAME= solution_adj
+SOLUTION_FILENAME= solution_flow.dat
+SOLUTION_ADJ_FILENAME= solution_adj.dat
 TABULAR_FORMAT= CSV
 CONV_FILENAME= history
-RESTART_FILENAME= restart_flow
-RESTART_ADJ_FILENAME= restart_adj
+RESTART_FILENAME= restart_flow.dat
+RESTART_ADJ_FILENAME= restart_adj.dat
 VOLUME_FILENAME= flow
 VOLUME_ADJ_FILENAME= adjoint
-GRAD_OBJFUNC_FILENAME= of_grad
+GRAD_OBJFUNC_FILENAME= of_grad.dat
 SURFACE_FILENAME= surface_flow
 SURFACE_ADJ_FILENAME= surface_adjoint
 OUTPUT_WRT_FREQ= 250
