--- a/meson.build
+++ b/meson.build
@@ -6,6 +6,7 @@ project('SU2', 'c', 'cpp',
                           'warning_level=0',
                           'c_std=c99',
                           'cpp_std=c++11'])
+#add_global_arguments('-lcantera', language : 'cpp')
 
 fsmod = import('fs')
 if not fsmod.exists('su2preconfig.timestamp')
@@ -290,6 +291,17 @@ if get_option('enable-coolprop')
     message('WARNING: CPU is not x86, skipping CoolProp dependency.')
   endif
 endif
+
+# nijso cantera
+#cantera_include = include_directories(['/home/nbe0dev/Codes/cantera/include'])
+#cantera_lib     = static_library('cantera', 
+#			       include_directories : cantera_include)
+#
+#cantera_dep = declare_dependency(link_with : cantera_lib, 
+#                               link_args: [ '-L/home/nbe0dev/Codes/cantera/build/lib', '-lcantera'],
+#                               include_directories : cantera_include)
+#su2_deps     += cantera_dep
+
 
 if get_option('enable-mlpcpp')
   su2_cpp_args += '-DHAVE_MLPCPP'
