--- a/config_template.cfg
+++ b/config_template.cfg
@@ -1389,12 +1389,13 @@ CFL_NUMBER= 15.0
 CFL_ADAPT= NO
 %
 % Parameters of the adaptive CFL number (factor-down, factor-up, CFL min value,
-%                                        CFL max value, acceptable linear solver convergence)
+%                                        CFL max value, acceptable linear solver convergence, start-iter)
 % Local CFL increases by factor-up until max if the solution rate of change is not limited,
 % and acceptable linear convergence is achieved. It is reduced if rate is limited, or if there
 % is not enough linear convergence, or if the nonlinear residuals are stagnant and oscillatory.
 % It is reset back to min when linear solvers diverge, or if nonlinear residuals increase too much.
-CFL_ADAPT_PARAM= ( 0.1, 2.0, 10.0, 1e10, 0.001 )
+% Optional starting iteration when the adaptive CFL is activated.
+CFL_ADAPT_PARAM= ( 0.1, 2.0, 10.0, 1e10, 0.001, 1)
 %
 % Maximum Delta Time in local time stepping simulations
 MAX_DELTA_TIME= 1E6
