--- a/TestCases/species_transport/venturi_primitive_3species/species2_primitiveVenturi_CANTERA.cfg
+++ b/TestCases/species_transport/venturi_primitive_3species/species2_primitiveVenturi_CANTERA.cfg
@@ -45,7 +45,7 @@ PRANDTL_LAM= 0.72
 TURBULENT_CONDUCTIVITY_MODEL= NONE
 PRANDTL_TURB= 0.90
 %
-GAS_COMPOSITION= H2, CH4
+GAS_COMPOSITION_NAMES= H2, CH4
 CHEMICAL_MECHANISM_FILE= grid30.yaml
 PHASE_NAME= gri30
 TRANSPORT_MODEL= mixture-averaged
