--- a/TestCases/species_transport/venturi_primitive_3species/species2_primitiveVenturi_CANTERA.cfg
+++ b/TestCases/species_transport/venturi_primitive_3species/species2_primitiveVenturi_CANTERA.cfg
@@ -23,7 +23,7 @@ INC_DENSITY_INIT= 1.1766
 %
 INC_VELOCITY_INIT= ( 1.00, 0.0, 0.0 )
 %
-INC_ENERGY_EQUATION= YES
+INC_ENERGY_EQUATION= NO
 INC_TEMPERATURE_INIT= 300.0
 %
 INC_NONDIM= DIMENSIONAL
@@ -46,7 +46,7 @@ TURBULENT_CONDUCTIVITY_MODEL= NONE
 PRANDTL_TURB= 0.90
 %
 GAS_COMPOSITION_NAMES= H2, CH4
-CHEMICAL_MECHANISM_FILE= grid30.yaml
+CHEMICAL_MECHANISM_FILE= gri30.yaml
 PHASE_NAME= gri30
 TRANSPORT_MODEL= mixture-averaged
 %
