--- a/TestCases/turbomachinery/multi_interface/multi_interface_rst.cfg
+++ b/TestCases/turbomachinery/multi_interface/multi_interface_rst.cfg
@@ -134,7 +134,7 @@ OUTPUT_FILES= RESTART
 MESH_FILENAME= three_zone_quarter_cyl.su2
 MESH_FORMAT= SU2
 MESH_OUT_FILENAME= mesh_out.su2
-SOLUTION_FILENAME= restart_flow.dat
+SOLUTION_FILENAME= solution_flow.dat
 SOLUTION_ADJ_FILENAME= solution_adj.dat
 TABULAR_FORMAT= TECPLOT
 CONV_FILENAME= history
