adding diffusivity models for CANTERA

--- a/TestCases/species_transport/venturi_primitive_3species/species2_primitiveVenturi_CANTERA.cfg
+++ b/TestCases/species_transport/venturi_primitive_3species/species2_primitiveVenturi_CANTERA.cfg
@@ -100,7 +100,7 @@ TIME_DISCRE_FLOW= EULER_IMPLICIT
 % -------------------- SCALAR TRANSPORT ---------------------------------------%
 %
 KIND_SCALAR_MODEL= SPECIES_TRANSPORT
-DIFFUSIVITY_MODEL= CONSTANT_DIFFUSIVITY
+DIFFUSIVITY_MODEL= UNITY_LEWIS
 DIFFUSIVITY_CONSTANT= 0.001
 %
 CONV_NUM_METHOD_SPECIES= BOUNDED_SCALAR
