define DIFFUSIVITY_MODEL=CANTERA , transport model defines the diffusivity model

--- a/UnitTests/SU2_CFD/fluid/multicomponent_cantera.cfg
+++ b/UnitTests/SU2_CFD/fluid/multicomponent_cantera.cfg
@@ -34,6 +34,6 @@ TRANSPORT_MODEL= mixture-averaged
 % -------------------- SCALAR TRANSPORT ---------------------------------------%
 %
 KIND_SCALAR_MODEL= SPECIES_TRANSPORT
-DIFFUSIVITY_MODEL= UNITY_LEWIS
+DIFFUSIVITY_MODEL= CANTERA
 %
 SPECIES_INIT= 0.020137986304114414,0.22830757006769173
