adding chemical source term

--- a/UnitTests/SU2_CFD/fluid/multicomponent_cantera.cfg
+++ b/UnitTests/SU2_CFD/fluid/multicomponent_cantera.cfg
@@ -22,13 +22,14 @@ INC_NONDIM= DIMENSIONAL
 % -------------------- FLUID PROPERTIES ------------------------------------- %
 %
 FLUID_MODEL= FLUID_CANTERA
+COMBUSTION= YES
 %
 CONDUCTIVITY_MODEL= CANTERA
 VISCOSITY_MODEL= CANTERA
 %
 GAS_COMPOSITION_NAMES= H2, O2, N2
-CHEMICAL_MECHANISM_FILE= h2o2.yaml
-PHASE_NAME= ohmech
+CHEMICAL_MECHANISM_FILE= gri30.yaml
+PHASE_NAME= gri30
 TRANSPORT_MODEL= mixture-averaged
 %
 % -------------------- SCALAR TRANSPORT ---------------------------------------%
