add new option in test case config

--- a/TestCases/sliding_interface/inlet_distortion_relative_frame/duct_unsteady.cfg
+++ b/TestCases/sliding_interface/inlet_distortion_relative_frame/duct_unsteady.cfg
@@ -142,6 +142,8 @@ MARKER_INLET= ( INFLOW, 288.6, 120000.0, 0.0, 0.0, 1.0 )
 %
 MARKER_OUTLET= ( OUTFLOW, 101300.0 )
 %
+RELATIVE_FRAME_SLIDINGPLANE=YES
+%
 % ------------- COMMON PARAMETERS DEFINING THE NUMERICAL METHOD ---------------%
 %
 % Numerical method for spatial gradients (GREEN_GAUSS, WEIGHTED_LEAST_SQUARES)
