adding ignition and saving marker inlet composition for future implementations

--- a/TestCases/species_transport/venturi_primitive_3species/species2_primitiveVenturi_CANTERA.cfg
+++ b/TestCases/species_transport/venturi_primitive_3species/species2_primitiveVenturi_CANTERA.cfg
@@ -31,7 +31,7 @@ INC_NONDIM= DIMENSIONAL
 % -------------------- FLUID PROPERTIES ------------------------------------- %
 %
 FLUID_MODEL= FLUID_CANTERA
-COMBUSTION = YES
+COMBUSTION = NO
 %
 THERMODYNAMIC_PRESSURE= 101325.0 
 %
