--- a/UnitTests/SU2_CFD/fluid/multicomponent_cantera.cfg
+++ b/UnitTests/SU2_CFD/fluid/multicomponent_cantera.cfg
@@ -23,6 +23,7 @@ INC_NONDIM= DIMENSIONAL
 %
 FLUID_MODEL= FLUID_CANTERA
 COMBUSTION= YES
+FLAME_INIT_METHOD= SPARK
 %
 CONDUCTIVITY_MODEL= CANTERA
 VISCOSITY_MODEL= CANTERA
