--- a/config_template.cfg
+++ b/config_template.cfg
@@ -1390,8 +1390,8 @@ CFL_ADAPT= NO
 %
 % Parameters of the adaptive CFL number (factor-down, factor-up, CFL min value,
 %                                        CFL max value, acceptable linear solver convergence, starting iteration)
-% After the starting iteration has passed, local CFL increases by factor-up until max if the solution rate of change is not limited,
-% and acceptable linear convergence is achieved. It is reduced if rate is limited, or if there
+% After the starting iteration has passed, local CFL increases by factor-up until max if the solution rate of
+% change is not limited, and acceptable linear convergence is achieved. It is reduced if rate is limited, or if there
 % is not enough linear convergence, or if the nonlinear residuals are stagnant and oscillatory.
 % It is reset back to min when linear solvers diverge, or if nonlinear residuals increase too much.
 CFL_ADAPT_PARAM= ( 0.1, 2.0, 10.0, 1e10, 0.001, 0)
