--- a/config_template.cfg
+++ b/config_template.cfg
@@ -24,7 +24,7 @@ KIND_TURB_MODEL= NONE
 % Specify versions/corrections of the SST model (V2003m, V1994m, VORTICITY, KATO_LAUNDER, UQ, SUSTAINING, COMPRESSIBILITY-WILCOX, COMPRESSIBILITY-SARKAR, DIMENSIONLESS_LIMIT)
 SST_OPTIONS= NONE
 %
-% Specify versions/corrections of the SA model (NEGATIVE, EDWARDS, WITHFT2, QCR2000, COMPRESSIBILITY, ROTATION, BCM, EXPERIMENTAL)
+% Specify versions/corrections of the SA model (NEGATIVE, EDWARDS, WITHFT2, QCR2000, COMPRESSIBILITY, ROTATION, BCM, EXPERIMENTAL, TC)
 SA_OPTIONS= NONE
 %
 % Transition model (NONE, LM)
