increasing MAXNVAR in scalar convection and diffusion

--- a/UnitTests/SU2_CFD/fluid/multicomponent_cantera.cfg
+++ b/UnitTests/SU2_CFD/fluid/multicomponent_cantera.cfg
@@ -29,8 +29,8 @@ CONDUCTIVITY_MODEL= CANTERA
 VISCOSITY_MODEL= CANTERA
 %
 GAS_COMPOSITION_NAMES= H2, O2, N2
-CHEMICAL_MECHANISM_FILE= gri30.yaml
-PHASE_NAME= gri30
+CHEMICAL_MECHANISM_FILE= h2o2.yaml
+PHASE_NAME= ohmech
 TRANSPORT_MODEL= mixture-averaged
 %
 % -------------------- SCALAR TRANSPORT ---------------------------------------%
