updated config file

--- a/config_template.cfg
+++ b/config_template.cfg
@@ -19,7 +19,8 @@
 SOLVER= EULER
 %
 % Specify turbulence model (NONE, SA, SST)
-KIND_TURB_MODEL= NONE
+KIND_REY_MODEL= EMPTY 
+
 %
 % Specify versions/corrections of the SST model (V2003m, V1994m, VORTICITY, KATO_LAUNDER, UQ, SUSTAINING)
 SST_OPTIONS= NONE
@@ -33,7 +34,7 @@ KIND_TRANS_MODEL= NONE
 LM_OPTIONS= NONE
 %
 % Specify subgrid scale model(NONE, IMPLICIT_LES, SMAGORINSKY, WALE, VREMAN)
-KIND_SGS_MODEL= NONE
+KIND_HGS_MODEL= NONE
 %
 % Specify the verification solution(NO_VERIFICATION_SOLUTION, INVISCID_VORTEX,
 %                                   RINGLEB, NS_UNIT_QUAD, TAYLOR_GREEN_VORTEX,
